[dependencies]
# UI Framework
eframe = "0.31.1"
egui = "0.31.1"
egui_plot = "0.32.1"

# Async Runtime
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3"

# Solana
solana-program = "2.2.1"
solana-client = "2.2.7"
solana-sdk = "2.2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Networking
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22.1"

# Data Structures
indexmap = "2.0"

# Time and Date
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "2.0.12"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Math and Statistics
num-traits = "0.2"
statrs = "0.18.0"

# Configuration
config = "0.15.11"
dirs = "6.0.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

# Optional: For advanced charting
# plotly = { version = "0.8", optional = true }
# ta = { version = "0.5", optional = true }  # Technical analysis indicators

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = []
advanced_charts = [] # For future advanced charting features
technical_analysis = [] # For future TA indicators

# Optimization for release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Development profile optimizations
[profile.dev]
opt-level = 1
debug = true

# Build configuration

